# soulspot-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  :memory:?cache=shared&mode=memory&name=qybjpnxyvl  ADVANCED_SEARCH_IMPLEMENTATION.md  BUG_ANALYSIS_REPORT.md  CHANGELOG.md  CLEANUP.md  COVERAGE_ANALYSIS_SUMMARY.md  Dockerfile  ERROR_FIX_COMPLETION_REPORT.md  FEHLER_REVIEW_ABSCHLUSS.md  FINAL_SUMMARY.md  FRONTEND_IMPROVEMENTS.md  GRIDSTACK_IMPLEMENTATION_NOTES.md  HTMX_EVALUATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Justfile  LIBRARY_MANAGEMENT_SUMMARY.md  Makefile  PHASE3_SUMMARY.md  PR10_SUMMARY.md  QA_SESSION_SUMMARY.md  README.md  REFACTORING.md  REVIEW_FIXES_REPORT.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md  SPOTIFY_AUTH_SUMMARY.md  SPOTIFY_FIX_SOFORT.md  SPOTIFY_SETUP.md  TASK_STATUS.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_REPORT.md  UI_UX_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  (+8 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: UI-Design-Auftrag.md  architecture_decision.md  bug_report.md  documentation_update.md  feature_request.md  release_checklist.md  v2_0_dynamic_views.md
.github/agents/: README.md  architecture-guardian-agent.md  backend-agent.md  backend-frontend-agent.md  code-quality-reviewer-agent.md  dependency-security-agent.md  documentation-sync-agent.md  frontend-agent.md  review-agent.md  test-coverage-guardian-agent.md
.github/instructions/: backend.instructions.md  database.instructions.md  frontend.instructions.md  python.instructions.md  static.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  create-release.yml  deploy-prod.yml  deploy-staging.yml  docker-daily-build.yml  release.yml
alembic/: env.py
alembic/versions/: 0372f0c937d1_add_genre_field_to_tracks.py  0b88b6152c1d_add_dashboard_widget_schema.py  259d78cbdfef_initial_schema_with_all_domain_entities.py  40cac646364c_add_session_persistence.py  46d1c2c2f85b_add_priority_field_to_downloads.py  a0fbb3aff2a8_merge_session_persistence_and_genres_.py  aa15670cdf15_add_library_management_schema.py  bb16770eeg26_add_automation_and_watchlist_schema.py  c7da905f261a_add_image_url_to_artists.py  cc17880fff37_add_performance_indexes.py  dd18990ggh48_add_genres_and_tags_to_artists.py  ee19001hhj49_remove_widget_system.py  ff20002ii50_add_album_artwork_url.py  gg20003jj51_add_playlist_cover_url.py  hh21004kkl52_add_spotify_browse_tables.py  ii22005llm53_add_spotify_tokens_table.py  jj23006mmn54_add_spotify_sync_features.py  jj23006mmn54_merge_image_url_and_spotify_tokens_.py  kk24007nno55_add_duplicate_candidates_table.py  ll25009ooq57_rename_local_library_tables.py  mm24007nnp55_add_spotify_sync_features.py  nn25010ppr58_add_album_types_and_enrichment.py
design/: tailwind.theme.js
design/tokens/: colors.json  typography.json
docker/: Dockerfile  README.md  USAGE.md  docker-compose.yml
docs/: ACCEPTANCE_CRITERIA_VERIFICATION.md  DOCUMENTATION_STRUCTURE.md  MULTI_DEVICE_AUTH.md  MULTI_DEVICE_AUTH_DE.md  README.md  SQLITE_BEST_PRACTICES.md  TESTING_STRATEGY.md  UI_V2_IMPLEMENTATION_SUMMARY.md  advanced-search-guide.md  architecture.md  backend-development-roadmap.md  ci-cd.md  contributing.md  deployment-guide.md  design-guidelines.md  development-roadmap.md  docker-setup.md  download-management.md  frontend-development-roadmap.md  keyboard-navigation.md  observability-guide.md  onboarding-ui-implementation.md  onboarding-ui-overview.md  operations-runbook.md  pr-review-20251111.md  release-quick-reference.md  setup-guide.md  sqlite-operations.md  testing-guide.md  troubleshooting-guide.md  ui-ux-testing-report.md  ui-ux-visual-guide.md
docs/.github/: copilot-instructions.md
docs/analysis/: initial-assessment.md
docs/ui/: theme.css  (+1 more)
examples/: README.md  circuit_breaker_demo.py
scripts/: capture_screenshots.py  prepare-release.sh  test-ui-features.sh
tests/: conftest.py
ui/: README_UI_1_0.md
(+462 files in other folders)
