[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soulspot-bridge"
version = "0.1.0"
description = "Intelligente Musik-Download-Anwendung mit Spotify-Playlist-Synchronisation und Soulseek-Integration"
authors = ["bozzfozz"]
readme = "README.md"
packages = [{include = "soulspot", from = "src"}]
license = "MIT"
homepage = "https://github.com/bozzfozz/soulspot-bridge"
repository = "https://github.com/bozzfozz/soulspot-bridge"
keywords = ["spotify", "soulseek", "music", "download", "slskd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

[tool.poetry.dependencies]
python = "^3.12"
# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
# Data Validation & Settings
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
# Database & ORM
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
# HTTP Client
httpx = "^0.28.0"
# Template Engine & Frontend
jinja2 = "^3.1.0"
# Security
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# Utilities
python-dotenv = "^1.0.0"
# Observability & Monitoring
python-json-logger = "^3.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
factory-boy = "^3.3.0"
pytest-httpx = "^0.35.0"
# Code Quality
ruff = "^0.7.0"
mypy = "^1.13.0"
# Security
bandit = "^1.8.0"
safety = "^3.2.0"
# Tools
pre-commit = "^3.8.0"
coverage = "^7.6.0"



[tool.poetry.scripts]
soulspot = "soulspot.main:main"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
    "-ra",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
